--- a/index.html
+++ b/index.html
@@ -6,9 +6,42 @@
 </head>
 <body>
     <header>
+        <nav>
+            <ul>
+                <li id ="logo">
+                    <img src="http://via.placeholder.com/200x70">
+                </li>
+                <li>Nav Item 1</li>
+                <li>Nav Item 2</li>
+                <li>Nav Item 3</li>
+                <li>Nav Item 4</li>
+            </ul>
+        </nav>
     </header>
     <main>
+        <section id="section1">
+            <img src="http://via.placeholder.com/960x450">
+        </section>
+        <section id="section2">
+            <img src="http://via.placeholder.com/300x375">
+        </section>
+        <section id="section3">
+            <img src="http://via.placeholder.com/300x375">
+        </section>
+        <section id="section4">
+            <img src="http://via.placeholder.com/300x375">
+        </section>
+        <section id="section5">
+            <img src="http://via.placeholder.com/480x400">
+        </section>
+        <section id="section6">
+            <h1>Featured Section Heading</h1><br>
+                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                <p id ="button">
+                    <button>Call To Action</button>
+                </p>
+        </section>
     </main>
-    <footer>
+    <footer id ="footer">
     </footer>
 </body>
